[CHG] Se agregan mensajes respecto a los clientes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,13 +5,21 @@ auth.message.errors=El campo '%s'
 auth.message.register=El usuario ha sido registrado correctamente
 
 author.message.internalServerError=Error al realizar la consulta a la base de datos
-author.message.authorNull=El autor con ID: %s no existe en la base de datos
+author.message.authorNull=El autor con ID: %s, no existe en la base de datos
 author.message.errors=El campo '%s'
 author.message.successIndex=Lista de autores cargada correctamente
 author.message.successShow=Autor cargado correctamente
 author.message.successCreate=El autor ha sido creado correctamente
 author.message.successUpdate=El autor ha sido actualizado correctamente
 author.message.successDelete=El autor ha sido elimiando con exito
+
+client.message.internalServerError=Error al realizar la consulta a la base de datos
+client.message.clientNull=El cliente ID: %s, no existe en la base de datos
+client.message.successIndex=Listado de clientes cargada correctamente
+client.message.successShow=Cliente encontrado con exito
+client.message.successCreate=El cliente ha sido creado con exito
+client.message.successUpdate=El cliente ha sido actualizado con exito
+client.meesage.successDelete=El cliente ha sido eliminado con exito
 
 user.username=nombre de usuario
 user.email=correo electronico
