--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,7 +6,8 @@ auth.message.register=El usuario ha sido registrado correctamente
 
 author.message.internalServerError=Error al realizar la consulta a la base de datos
 author.message.authorNull=El autor con ID: %s, no existe en la base de datos
-author.message.errors=El campo '%s'
+author.message.errorDataAccess=%s: %s
+author.message.errors=El campo '%s' %s
 author.message.successIndex=Lista de autores cargada correctamente
 author.message.successShow=Autor cargado correctamente
 author.message.successCreate=El autor ha sido creado correctamente
@@ -15,11 +16,14 @@ author.message.successDelete=El autor ha sido elimiando con exito
 
 client.message.internalServerError=Error al realizar la consulta a la base de datos
 client.message.clientNull=El cliente ID: %s, no existe en la base de datos
+client.message.errorDataAccess=%s: %s
+client.message.errors=El campo '%s' %s
 client.message.successIndex=Listado de clientes cargada correctamente
 client.message.successShow=Cliente encontrado con exito
 client.message.successCreate=El cliente ha sido creado con exito
 client.message.successUpdate=El cliente ha sido actualizado con exito
-client.meesage.successDelete=El cliente ha sido eliminado con exito
+client.message.successDelete=El cliente ha sido eliminado con exito
+client.message.apiOperation.index=Encontrar el listado de todos los clientes
 
 user.username=nombre de usuario
 user.email=correo electronico
