--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,16 @@ auth.message.errorCredentials=Las credenciales son invalidas
 auth.message.errors=El campo '%s'
 auth.message.register=El usuario ha sido registrado correctamente
 
+users.message.internalServerError=Error al realizar la consulta a la base de datos
+users.message.userNull=El usuario ID: %s, no existe en la base de datos
+users.message.errorDataAccess=%s: %s
+users.message.errors=El campo '%s' %s
+users.message.successIndex=Listado de usuarios cargado con exito
+users.message.successShow=Usuario encontrado con exito
+users.message.successCreate=El usuario ha sido creado con exito
+users.message.successUpdate=El usuario ha sido actualizado con exito
+users.message.successDelete=El usuario ha sido eliminado con exito
+
 author.message.internalServerError=Error al realizar la consulta a la base de datos
 author.message.authorNull=El autor con ID: %s, no existe en la base de datos
 author.message.errorDataAccess=%s: %s
@@ -24,6 +34,16 @@ client.message.successCreate=El cliente ha sido creado con exito
 client.message.successUpdate=El cliente ha sido actualizado con exito
 client.message.successDelete=El cliente ha sido eliminado con exito
 client.message.apiOperation.index=Encontrar el listado de todos los clientes
+
+genres.message.internalServerError=Error al realizar la consulta a la base de datos
+genres.message.clientNull=El genero ID: %s, no existe en la base de datos
+genres.message.errorDataAccess=%s: %s
+genres.message.errors=El campo '%s' %s
+genres.message.successIndex=Listado de generos cargado con exito
+genres.message.successShow=Genero encontrado con exito
+genres.message.successCreate=El genero ha sido creado con exito
+genres.message.successUpdate=El genero ha sido actualizado con exito
+genres.message.successDelete=El genero ha sido eliminado con exito
 
 user.username=nombre de usuario
 user.email=correo electronico
