[CHG] Se agregan mensajes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,11 +3,13 @@ auth.message.errorExist=El %s de usuario ya existe
 auth.message.errorCredentials=Las credenciales son invalidas
 auth.message.errors=El campo '%s'
 auth.message.register=El usuario ha sido registrado correctamente
+auth.message.internalServerError=Error al realizar la consulta a la base de datos
 
 users.message.internalServerError=Error al realizar la consulta a la base de datos
 users.message.userNull=El usuario ID: %s, no existe en la base de datos
 users.message.errorDataAccess=%s: %s
 users.message.errors=El campo '%s' %s
+users.message.errorExist=El %s de usuario ya existe
 users.message.successIndex=Listado de usuarios cargado con exito
 users.message.successShow=Usuario encontrado con exito
 users.message.successCreate=El usuario ha sido creado con exito
